PPL-Sources/PPL-FE/src/test/resources/CoCos/Valid/ReturnStatementExists2.par
ReturnStatementExists2 {
var Int test = 0
reduction add([Int] input) : Int res {
    res += input[INDEX]
}
seq main() : Void {
    test = add<<<>>>([1,2,3])

}
}