PPL-Sources/PPL-FE/src/test/resources/CoCos/Invalid/NoExitInPattern.par
NoExitInPattern {

map add([Int] input) : [Int] res{
    res[INDEX] = input[INDEX] + 1
    exit(0)
}
seq main() : Void {
    var [Int] test = [0,0]
    test = add(test)
}
}